[project]
name = "tap.py"
version = "3.2"
description = "Test Anything Protocol (TAP) tools"
readme = "docs/releases.rst"
license = {text = "BSD"}
authors = [
    { name = "Matt Layman", email = "matthewlayman@gmail.com" }
]
homepage = "https://github.com/python-tap/tappy"
requires-python = ">=3.9"
dependencies = []
keywords = ["TAP", "unittest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing"
]

[project.optional-dependencies]
yaml = ["more-itertools", "PyYAML>=5.1"]

[project.scripts]
tappy = "tap.main:main"
tap = "tap.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["docs/releases.rst", "LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["docs/releases.rst", "LICENSE"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # bandit: Use of `assert` detected
    "S101",
]
