[project]
name = "tap.py"
version = "3.2.1"
description = "Test Anything Protocol (TAP) tools"
readme = "docs/releases.rst"
license = {text = "BSD"}
authors = [
    { name = "Matt Layman", email = "matthewlayman@gmail.com" }
]
homepage = "https://github.com/python-tap/tappy"
requires-python = ">=3.9"
dependencies = []
keywords = ["TAP", "unittest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing"
]

[project.optional-dependencies]
yaml = ["more-itertools", "PyYAML>=5.1"]

[project.scripts]
tappy = "tap.main:main"
tap = "tap.main:main"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "sphinx>=7.4.7",
    "tox>=4.24.1",
    # These are the optional dependencies to enable TAP version 13 support.
    "more-itertools>=10.6.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/tests",
]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["tap"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # bandit: Use of `assert` detected
    "S101",
]
